03/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Extended the DefaultGraphCell class to hold schema children thus forming
      a schema tree model within the graph model. This should make it easier
      to perform edits and such.
    * Improved parsing time a bit.

03/15/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the parser and layout management for the graph cells.

03/14/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added some more code to make the graph cells look nicer when you move them
      around. The edges now point to the ports correctly.

03/13/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Initial import of the schema view.
    * The schema view parses out the and correctly creates the right
      graph cells but doesn't format them correctly.